--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
     "i18next": "^21.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
+    "react-simple-typewriter": "^4.0.5",
     "sass": "^1.55.0"
   },
   "devDependencies": {
